--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FInal Android App Project</string>
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
+    <string name="title">TASK MASTER</string>
+
 </resources>
